--- a/templates/emails/includes/base/button_row.html
+++ b/templates/emails/includes/base/button_row.html
@@ -15,7 +15,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="50%" class="emailButton" style="background-color: {{bgcolor}};">
                   <tr>
                     <td align="center" valign="middle" class="buttonContent" style="padding-top:15px;padding-bottom:15px;padding-right:15px;padding-left:15px;">
-                      <a style="color:{{textcolor}};text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:135%;" href="{{link}}" target="_blank">
+                      <a style="color:{{textcolor}};text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:135%;" href="{{link}}">
                         {% block content %}
                         {{text}}
                         {% endblock%}
