add arrived status

--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -50,7 +50,9 @@
     <td>{% trans flight_plan %}</td>
     {% endwith %}
     <td>
-      {% if res.canceled %}
+      {% if res.arrival %}
+          <span class="badge badge-pill badge-success">{% trans 'str_Arrived'%}</span>
+      {% elif res.canceled %}
           <span class="badge badge-pill badge-danger">{% trans 'str_Canceled'%}</span>
       {% elif res.confirmed %}
           <span class="badge badge-pill badge-primary">{% trans 'str_Confirmed'%}</span>
