--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -117,7 +117,9 @@
     <td>{{res.fuel_reservation}}</td>
     <td>{{res.fuel_served}}</td>
     <td>
-      {% if res.canceled %}
+      {% if res.arrival %}
+          <span class="badge badge-pill badge-success">{% trans 'str_Arrived'%}</span>
+      {% elif res.canceled %}
           <span class="badge badge-pill badge-danger">{% trans 'str_Canceled'%}</span>
       {% elif res.confirmed %}
           <span class="badge badge-pill badge-primary">{% trans 'str_Confirmed'%}</span>
