--- a/meeting/templates/staff_reservation_validation.html
+++ b/meeting/templates/staff_reservation_validation.html
@@ -178,16 +178,10 @@
   {% else %}
     <a href="{% url 'staff_reservation_invalidate' reservation.pk %}" class="btn btn-danger">{% trans 'str_Invalidate'%}</a>
     {% with label="label"|add:reservation.reservation_number%}
-      <div style="display:none" >
-        <div class="" id="{{label}}" style="text-align:center;padding-top:10%">
-            {{reservation.pilot}}
-            <br>
-            {{reservation.ulm}}
-        </div>
-      </div>
+      {% include 'includes/elements/label.html' with label=label res=reservation%}
+      <button type="button" onclick="printJS('{{label}}', 'html')" class="btn btn-warning">{% trans "str_Print" %}</button>
     {% endwith %}
   {% endif %}
-  <button type="button" onclick="printJS('{{label}}', 'html')" class="btn btn-warning">{% trans "str_Print" %}</button>
     <br>
     <hr>
     <a href="{% url 'ajax_staff_cancel_reservation' reservation.pk %}" class="btn btn-danger">{% trans 'str_Cancel'%}</a>
