make departure slots independant from arrival slots

--- a/meeting/templates/aviable_timeslot_logged.html
+++ b/meeting/templates/aviable_timeslot_logged.html
@@ -7,5 +7,16 @@
 
 
 {% block content %}
-{% include 'includes/elements/slots_aviable_table.html'%}
+{% if meeting%}
+    <h2>{% trans 'str_Arrival_timeslot_aviable'%}</h2>
+
+    {% include 'includes/elements/slots_aviable_table.html'%}
+
+    <h2>{% trans 'str_Departure_timeslot_aviable'%}</h2>
+
+    {% include 'includes/elements/departure_slots_aviable_table.html'%}
+
+  {% else %}
+    {% trans 'str_no_meeting' %}
+  {% endif%}
 {% endblock%}
