update slot aviable template

--- a/meeting/templates/aviable_timeslot.html
+++ b/meeting/templates/aviable_timeslot.html
@@ -6,5 +6,18 @@
 {% endblock %}
 
 {% block content %}
-{% include 'includes/elements/slots_aviable_table.html'%}
+{% block content %}
+{% if meeting%}
+    <h2>{% trans 'str_Arrival_timeslot_aviable'%}</h2>
+
+    {% include 'includes/elements/arrival_slots_aviable_table.html'%}
+
+    <h2>{% trans 'str_Departure_timeslot_aviable'%}</h2>
+
+    {% include 'includes/elements/departure_slots_aviable_table.html'%}
+
+  {% else %}
+    {% trans 'str_no_meeting' %}
+  {% endif%}
+{% endblock%}
 {% endblock %}
